<resources>
    <string name="app_name">homework4</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="_point">.</string>
    <string name="_5">5</string>
    <string name="_multiply">*</string>
    <string name="_minus">-</string>
    <string name="_plus">+</string>
    <string name="_divide">÷</string>
    <string name="_equals">=</string>
    <string name="_ac">AC</string>
    <string name="_plus_minus">+/-</string>
    <string name="_percent">%</string>
    <string name="_result" />
    <string name="theme_one">theme1</string>
    <string name="theme_two">theme2</string>
    <string name="theme_three">theme3</string>
    <string name="select_theme">Select Theme</string>
    <string name="how_to">HOW TO</string>
</resources>